# signalflow-trading

./: .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CNAME  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  versions.json
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml  readme.md  release.yml  test.yml
api/: index.html
api/core/: index.html
api/data/: index.html
api/detector/: index.html
api/feature/: index.html
api/labeler/: index.html
api/strategy/: index.html
api/validator/: index.html
contributing/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/api/: index.html
dev/contributing/: index.html
dev/quickstart/: index.html
docs/: abbreviations.md  concepts.md  contributing.md  glossary.md  hooks.py  index.md  main.html  quickstart.md
docs/api/: analytic.md  api.md  cli.md  config.md  core.md  data.md  detector.md  engine.md  experiment.md  feature.md  flow.md  index.md  labeler.md  models.md  strategy.md  ta.md  target.md  transform.md  validator.md  viz.md
docs/ecosystem/: index.md  sf-kedro.md  signalflow-labs.md  signalflow-nn.md  signalflow-ta.md
docs/getting-started/: configuration.md  installation.md
docs/guide/: advanced-strategies.md  cli.md  custom-data-types.md  custom-detectors.md  data-sources.md  data-stores.md  experiments.md  live-and-walk-forward.md  model-integration.md  semantic-decorators.md  signal-architecture.md  state-persistence.md  statistical-analysis.md  validators.md
docs/guides/: custom_detectors.md
docs/notebooks/: 01_quickstart.ipynb  02_custom_detector.ipynb  03_data_loading.ipynb  04_visualization.ipynb  05_advanced_strategies.ipynb  index.md  labeling_tutorial.ipynb  strategy_tutorial.ipynb
docs/overrides/: main.html
docs/plans/: ROADMAP.md  api-ergonomics-improvement.md
docs/stylesheets/: extra.css
getting-started/installation/: index.html
notebooks/: .gitkeep  ROADMAP.md  funding_rate_detector.ipynb  strategy.duckdb.wal  strategy_tutorial.ipynb  tutorial.ipynb
quickstart/: index.html
search/: search_index.json
signalflow-kedro/: README.md  pyproject.toml
signalflow-kedro/conf/: logging.yml
signalflow-kedro/notebooks/: load_data.ipynb
signalflow-kedro/src/signalflow_kedro/: __init__.py  __main__.py  settings.py
src/signalflow/: __init__.py  _hash.py  _help.py  _version.py  decorators.py  enums.py  errors.py  help_glossary.py  registry.py
tests/: conftest.py  test_anomaly_labeler.py  test_atr_feature.py  test_backtest_broker.py  test_backtest_exporter.py  test_backtest_runner.py  test_base_mixin.py  test_broker_binance.py  test_build_pipe.py  test_bundle.py  test_bybit_source.py  test_cached_source.py  test_classification_metrics.py  test_cli.py  test_config.py  test_config_dag.py  test_contrib.py  test_correlation_metrics.py  test_cusum_event_detector.py  test_deribit_source.py  test_detector.py  test_distribution_metrics.py  test_encode.py  test_engine.py  test_entry_filters.py  test_entry_rules.py  test_enums.py  test_eventlog.py  test_exit_rules.py  test_experiment.py  test_experiment_spec.py  test_extended_metrics.py  test_feature_base.py  test_feature_examples.py  test_feature_pipeline.py  test_feature_store.py  test_flow.py  test_foundation.py  test_funding_rate_detector.py  test_global_event_detector.py  (+83 more)
tests/analytic/: test_base.py  test_compare.py  test_portfolio_metrics.py
tests/api/: __init__.py  conftest.py  test_autodiscover.py  test_batch.py  test_builder.py  test_docs_examples.py  test_exceptions.py  test_flow.py  test_flow_clone_sweep.py  test_flow_forecast.py  test_parity_baseline.py  test_report.py  test_result.py  test_shortcuts.py
tests/cli/: test_benchmark.py  test_cli.py  test_config.py  test_main.py
tests/config/: test_artifact_cache.py  test_artifact_schema.py
tests/core/: test_portfolio.py
tests/feature/: test_feature_spec.py  test_model_features.py  test_warmup_contract.py
tests/models/: __init__.py  test_model_registry.py
tests/stats/: __init__.py  conftest.py  test_base.py  test_bootstrap.py  test_monte_carlo.py  test_results.py  test_statistical_tests.py
tests/validator/: test_base.py
tests/viz/: __init__.py  conftest.py  test_api.py  test_extractors.py  test_graph.py  test_renderers.py  test_server.py
v0.2.3/: 404.html  index.html  sitemap.xml
v0.2.3/api/: index.html
v0.2.3/contributing/: index.html
v0.2.3/quickstart/: index.html
v0.2.3/search/: search_index.json
v0.2.4/: 404.html  index.html  sitemap.xml
v0.2.4/api/: index.html
v0.2.4/contributing/: index.html
v0.2.4/quickstart/: index.html
v0.2.9/: 404.html  hooks.py  index.html  objects.inv  sitemap.xml
v0.2.9/api/: index.html
v0.2.9/contributing/: index.html
v0.2.9/quickstart/: index.html
v0.2.9/search/: search_index.json
v0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.5/: 404.html  hooks.py  index.html  objects.inv  sitemap.xml
v0.3.6/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.7/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.1/: 404.html  index.html  sitemap.xml
v0.6.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.8.5/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.0/: 404.html  index.html  sitemap.xml
(+978 files in other folders)
