[project]
name = "signalflow-trading"
version = "0.3.5"
description = "SignalFlow: modular framework for trading signal generation, validation and execution"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "pathway2nothing" }
]
license = { file = "LICENSE" }

dependencies = [
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "duckdb>=1.0.0",
    "loguru>=0.7.0",
    "aiohttp>=3.9.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.0.0",
    "numba>=0.58.0",
    "lightning>=2.1.0",
    "numpy>=1.24.0",
    "pandas-ta>=0.3.14b",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.2",
  "pytest-asyncio>=0.23",
  "pre-commit>=3.7",
  "ruff>=0.15",
  "mypy>=1.19",
]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
  "mkdocs-minify-plugin>=0.7.0",
  "mike>=2.1.0",
  "mkdocs-macros-plugin>=1.5.0",
]

[project.urls]
Homepage = "https://signalflow-trading.com"
Source = "https://github.com/pathway2nothing/signalflow-trading"
Issues = "https://github.com/pathway2nothing/signalflow-trading/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["signalflow*"]

# --- Semantic Release Configuration ---
[tool.semantic_release]
version_variables = [
    "src/signalflow/__init__.py:__version__", 
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false 
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = false

# --- Ruff Configuration ---
[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["signalflow"]

# --- Mypy Configuration ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "loguru",
    "pandas_ta.*",
    "plotly.*",
    "numba.*",
    "optuna.*",
    "lightning.*",
    "duckdb.*",
    "aiohttp.*",
    "sklearn.*",
]
ignore_missing_imports = true

# --- Pytest Configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]