[project]
name = "signalflow-trading"
version = "0.8.5"
description = "SignalFlow: modular framework for trading signal generation, validation and execution"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "pathway2nothing" }
]
license = { file = "LICENSE" }

# V5 core - the six-noun framework runs on this set alone.
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "pyarrow>=14.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "cloudpickle>=3.0.0",
]

# CLI entry point
[project.scripts]
sf = "signalflow.cli.main:main"

[project.optional-dependencies]
# Technical-analysis indicator plugin.
ta = ["signalflow-ta>=0.8.0"]
# Neural encoders, RL strategy, and torch backends.
labs = ["signalflow-labs[rl]>=0.8.0"]
# Live deployment: experiment tracking + model artifact hub.
live = [
  "mlflow>=2.10",
  "huggingface_hub>=0.20",
]
# LLM strategy via any open OpenAI-compatible server (Ollama, vLLM, LM Studio, TGI).
llm = [
  "httpx>=0.27",
  "pydantic>=2.0",
]
# Everything: both plugins plus the live and llm extras.
all = ["signalflow-trading[ta,labs,live,llm]"]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.15",
  "mypy>=1.19",
]
test = [
  "pytest>=8.0",
  "pytest-timeout>=2.2",
  "pytest-asyncio>=0.23",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.0",
  "mkdocs-minify-plugin>=0.7.0",
  "mike>=2.1.0",
  "mkdocs-macros-plugin>=1.5.0",
  "mkdocs-jupyter>=0.24.0",
]

[project.urls]
Homepage = "https://signalflow-trading.com"
Source = "https://github.com/pathway2nothing/signalflow-trading"
Issues = "https://github.com/pathway2nothing/signalflow-trading/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["signalflow*"]

# --- Semantic Release Configuration ---
[tool.semantic_release]
version_variables = [
    "src/signalflow/_version.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = false

# --- Ruff Configuration ---
[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    # Mathematical docstrings legitimately use Greek letters (µ, σ, π) and
    # en/em dashes; we don't want ruff fighting that style.
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"src/signalflow/__init__.py" = ["I001"]  # Import order required for circular import avoidance

[tool.ruff.lint.isort]
known-first-party = ["signalflow"]

# --- Mypy Configuration ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "loguru",
    "sklearn.*",
    "scipy.*",
    "yaml.*",
    "lightgbm.*",
    "cloudpickle.*",
    "joblib.*",
    "tqdm.*",
    "stable_baselines3.*",
    "gymnasium.*",
    "torch.*",
    "mlflow.*",
    "huggingface_hub.*",
]
ignore_missing_imports = true

# --- Pytest Configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
